k8s/10-test1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1
  namespace: my
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test1
  template:
    metadata:
      labels:
        app: test1
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
