k8s/11-test1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test1
spec:
  selector:
    app: test1
  ports:
  - port: 80
    targetPort: 80
