k8s/21-test2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2
spec:
  selector:
    app: test2
  ports:
  - port: 80
    targetPort: 80
